RESOLVED FIXED302870
[threaded-animations] scroll-driven animations stop updating after reaching 100%
https://bugs.webkit.org/show_bug.cgi?id=302870
Summary [threaded-animations] scroll-driven animations stop updating after reaching 100%
Antoine Quint
Reported 2025-11-20 06:53:40 PST
If you open https://scroll-driven-animations.style/demos/progress-bar/css/, scroll to the bottom, and then scroll back, the progress bar at the top will remain stuck as if you were still at the bottom of the page.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-20 06:53:48 PST
Antoine Quint
Comment 2 2025-11-20 07:05:34 PST
EWS
Comment 3 2025-11-21 10:06:55 PST
Committed 303400@main (870d2f5946c8): <https://commits.webkit.org/303400@main> Reviewed commits have been landed. Closing PR #54251 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.